--- a/Market_Profile_Report.ipynb
+++ b/Market_Profile_Report.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# gets your API with the API key\n",
-    "gmaps = googlemaps.Client(key='AIzaSyC9JeKd62iKpo9Py8vSiIlm6rO9Kgj3mdw')"
+    "gmaps = googlemaps.Client(key='INSERT_API_KEY_HERE')"
    ]
   },
   {
